<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:orientation="vertical"
android:gravity="center"
android:background="@drawable/pagebkg"
tools:context=".SignupActivity">

<androidx.cardview.widget.CardView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="30dp"
    app:cardCornerRadius="30dp"
    app:cardElevation="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:padding="24dp"
       >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Sign Up"
            android:textSize="36sp"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/lavender"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/signup_name"

            android:layout_marginTop="40dp"
            android:padding="8dp"
            android:hint="Name"
            android:drawableLeft="@drawable/baseline_person_24"
            android:drawablePadding="8dp"
            android:textColor="@color/black"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/signup_email"

            android:layout_marginTop="20dp"
            android:padding="8dp"
            android:hint="Email"
            android:drawableLeft="@drawable/baseline_email_24"
            android:drawablePadding="8dp"
            android:textColor="@color/black"/>


        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/signup_username"

            android:layout_marginTop="20dp"
            android:padding="8dp"
            android:hint="Username"
            android:drawableLeft="@drawable/baseline_person_pin_24"
            android:drawablePadding="8dp"
            android:textColor="@color/black"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/signup_password"

            android:layout_marginTop="20dp"
            android:padding="8dp"
            android:hint="Password"
            android:inputType="textPassword"
            android:drawableLeft="@drawable/baseline_lock_24"
            android:drawablePadding="8dp"
            android:textColor="@color/black"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="Sign Up"
            android:id="@+id/signup_button"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/lavender"
            app:cornerRadius = "20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/loginRedirectText"
            android:text="Already an user? Login"
            android:layout_gravity="center"
            android:padding="8dp"
            android:layout_marginTop="10dp"
            android:textColor="@color/lavender"
            android:textSize="18sp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>

</LinearLayout>